--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  collection: ^1.19.1
   http: ^1.2.2
   uuid: ^4.5.1
   # path: ^1.8.0
